--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint": "8.45.0",
     "eslint-config-next": "^13.5.6",
     "gray-matter": "^4.0.3",
+    "html-react-parser": "^5.0.7",
     "next": "^13.5.6",
     "next-useragent": "^2.8.0",
     "postcss": "8.4.27",
